--- a/package.yaml
+++ b/package.yaml
@@ -7,6 +7,7 @@ dependencies:
   - wai-make-assets
   - servant
   - servant-elm >= 0.6.0.2
+  - servant-multipart
   - elm-bridge >= 0.5.2
   - wai
   - servant-server
